force-app/main/default/objects/b3o__Document__c/b3o__Document__c.object-meta.xml
<CustomObject>
    <label>Document (Doc Pack)</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents (Doc Pack)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>