force-app/main/default/objects/b3o__Document__c/fields/b3o__Allow_Editing_Submitted_Form__c.field-meta.xml
<CustomField>
    <fullName>b3o__Allow_Editing_Submitted_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the user can re-submit the document up until its approval</inlineHelpText>
    <label>Allow Editing Submitted Document</label>
    <type>Checkbox</type>
</CustomField>