force-app/main/default/objects/b3o__Document__c/fields/b3o__Conditional_Rendering_Rule__c.field-meta.xml
<CustomField>
    <fullName>b3o__Conditional_Rendering_Rule__c</fullName>
    <inlineHelpText>JSON rule for conditionally rendering this document</inlineHelpText>
    <label>Conditional Rendering Rule</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>