force-app/main/default/objects/b3o__Document__c/fields/b3o__Do_Not_Allow_Viewing_Submission__c.field-meta.xml
<CustomField>
    <fullName>b3o__Do_Not_Allow_Viewing_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the user won&apos;t be able to preview submissions they made</inlineHelpText>
    <label>Do Not Allow Viewing Submission</label>
    <type>Checkbox</type>
</CustomField>