force-app/main/default/objects/b3o__Document__c/fields/b3o__Do_Not_Auto_Close_Modal__c.field-meta.xml
<CustomField>
    <fullName>b3o__Do_Not_Auto_Close_Modal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If ticked, when a document is completed, the window will not auto-close</inlineHelpText>
    <label>Do Not Auto Close Modal</label>
    <type>Checkbox</type>
</CustomField>