force-app/main/default/objects/b3o__Document__c/fields/b3o__Do_Not_Pre_Load_Document__c.field-meta.xml
<CustomField>
    <fullName>b3o__Do_Not_Pre_Load_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Pre-loading will load the document before the user has clicked on the &quot;Submit&quot; button. This improves UX. However, pre-loading triggers the creation of a trace/submission/submitter. Select this option to direct the app to load documents only when requested.</inlineHelpText>
    <label>Do Not Pre-Load Document</label>
    <type>Checkbox</type>
</CustomField>