force-app/main/default/objects/b3o__Document__c/fields/b3o__Document_Description__c.field-meta.xml
<CustomField>
    <fullName>b3o__Document_Description__c</fullName>
    <inlineHelpText>Description are public!</inlineHelpText>
    <label>Document Description</label>
    <type>TextArea</type>
</CustomField>