force-app/main/default/objects/b3o__Document__c/fields/b3o__Document_Pack__c.field-meta.xml
<CustomField>
    <fullName>b3o__Document_Pack__c</fullName>
    <label>Document Pack</label>
    <referenceTo>b3o__Document_Pack__c</referenceTo>
    <relationshipName>Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>