force-app/main/default/objects/b3o__Document__c/fields/b3o__Document_Template__c.field-meta.xml
<CustomField>
    <fullName>b3o__Document_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Template</label>
    <referenceTo>b3d__Template__c</referenceTo>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>