force-app/main/default/objects/b3o__Document__c/fields/b3o__Expiring_Soon_Warning_Days__c.field-meta.xml
<CustomField>
    <fullName>b3o__Expiring_Soon_Warning_Days__c</fullName>
    <inlineHelpText>Enter the number of days before the expiry of the document before we need to consider it as expiring soon</inlineHelpText>
    <label>Expiring Soon Warning (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>