force-app/main/default/objects/b3o__Document__c/fields/b3o__External_Link__c.field-meta.xml
<CustomField>
    <fullName>b3o__External_Link__c</fullName>
    <description>{0} is the contactId</description>
    <inlineHelpText>An external page will be displayed to the user. You can add URL params.</inlineHelpText>
    <label>External Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>