force-app/main/default/objects/b3o__Document__c/fields/b3o__Form__c.field-meta.xml
<CustomField>
    <fullName>b3o__Form__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Form</label>
    <referenceTo>b3f__Form__c</referenceTo>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>