force-app/main/default/objects/b3o__Document__c/fields/b3o__Pending_Review_Status_Override__c.field-meta.xml
<CustomField>
    <fullName>b3o__Pending_Review_Status_Override__c</fullName>
    <inlineHelpText>The text will be displayed instead of &quot;Pending Review&quot;</inlineHelpText>
    <label>Pending Review Status Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>