force-app/main/default/objects/b3o__Document__c/fields/b3o__Session__c.field-meta.xml
<CustomField>
    <fullName>b3o__Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>b3o__Session__c</referenceTo>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>