force-app/main/default/objects/b3o__Document__c/fields/b3o__Show_on_Successful_Rule_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>b3o__Show_on_Successful_Rule_Evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>By default, if the rule evaluates to &quot;true&quot;, the document will be hidden. Check this in order to show the document if the rule evaluates to &quot;true&quot;</inlineHelpText>
    <label>Show on Successful Rule Evaluation</label>
    <type>Checkbox</type>
</CustomField>