force-app/main/default/objects/b3o__Document__c/fields/b3o__Submit_Button_Label_Override__c.field-meta.xml
<CustomField>
    <fullName>b3o__Submit_Button_Label_Override__c</fullName>
    <label>Submit Button Label Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>