force-app/main/default/objects/b3o__Document__c/fields/b3o__Template__c.field-meta.xml
<CustomField>
    <fullName>b3o__Template__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark this to make this document a template</inlineHelpText>
    <label>Template</label>
    <type>Checkbox</type>
</CustomField>